# cmania

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/: test.osu
assets/test/: map.osu  map2.osu
sandbox/: CMakeLists.txt
sandbox/assets/: test.osu
sandbox/src/: main.cpp
src/: beatmap.c  beatmap.h  cmania_beatmap.c  cmania_beatmap.h  error.h  file.c  file.h  logging.h  main.c  osu_beatmap.c  osu_beatmap.h  playfield.c  playfield.h  types.h  util.c  util.h
tests/: CMakeLists.txt
tests/assets/osu/: test.osu
tests/assets/osu/huge/: map.osu
tests/src/: cmania_beatmap.cpp  file.cpp  osu_beatmap.cpp  sample.cpp
